@@ -17,7 +17,8 @@ require_once 'PHPUnit/Extensions/Database/DataSet/CsvDataSet.php';
  * Test class for JTableNested.
  * Generated by PHPUnit on 2009-10-08 at 22:01:58.
  */
-class JTableNestedTest extends JoomlaDatabaseTestCase {
+class JTableNestedTest extends JoomlaDatabaseTestCase
+{
 	/**
 	 * @var	JTableNested
 	 * @access protected
@@ -31,7 +32,8 @@ class JTableNestedTest extends JoomlaDatabaseTestCase {
 	 *
 	 * @access protected
 	 */
-	protected function setUp() {
+	protected function setUp()
+	{
 		parent::setup();
 		$connect = parent::getConnection();
 		$categories = $this->getDataSet();
@@ -40,7 +42,8 @@ class JTableNestedTest extends JoomlaDatabaseTestCase {
 		JFactory::$session = $this->getMock('JSession', array('_start'));
 	}
 
-	protected function getDataSet() {
+	protected function getDataSet()
+	{
 		$dataSet = new PHPUnit_Extensions_Database_DataSet_CsvDataSet(',', '"', '\\');
 		$refreshTestNames = array
 		(
@@ -69,11 +72,13 @@ class JTableNestedTest extends JoomlaDatabaseTestCase {
 	 *
 	 * @access protected
 	 */
-	protected function tearDown() {
+	protected function tearDown()
+	{
 		parent::tearDown();
 	}
 
-	public function testGetPath($nodata = true) {
+	public function testGetPath($nodata = true)
+	{
 		// Get path of ROOT node
 		$pathRoot = $this->object->getPath(1);
 		$this->assertEquals(1, count($pathRoot), 'Line: '.__LINE__.' Root path should have 1 element');
@@ -93,7 +98,8 @@ class JTableNestedTest extends JoomlaDatabaseTestCase {
 		$this->assertEquals(0, count($pathInvalid), 'Invalid path should have zero elements');
 	}
 
-	public function testGetTree($nodata = false) {
+	public function testGetTree($nodata = false)
+	{
 		// get Root as tree
 		$treeRoot = $this->object->getTree('1');
 		$this->assertEquals(68, count($treeRoot), 'Root tree should have 68 nodes');
@@ -121,14 +127,16 @@ class JTableNestedTest extends JoomlaDatabaseTestCase {
 		$this->assertEquals(0, count($treeInvalid), 'Invalid tree should have 0 nodes');
 	}
 
-	public function testIsLeaf() {
+	public function testIsLeaf()
+	{
 		$this->assertFalse($this->object->isLeaf(1), 'Root node is not a leaf');
 		$this->assertFalse($this->object->isLeaf(23), 'Templates node is not a leaf');
 		$this->assertFalse($this->object->isLeaf(-1), 'Invalid node is not a leaf');
 		$this->assertTrue($this->object->isLeaf(25), 'Plugins is a leaf');
 	}
 
-	public function testSetLocation() {
+	public function testSetLocation()
+	{
 		$table = $this->object;
 
 		// Test default location
@@ -144,7 +152,8 @@ class JTableNestedTest extends JoomlaDatabaseTestCase {
 		$this->assertFalse($table->setLocation(20,'xxx'));
 	}
 
-	public function testMove() {
+	public function testMove()
+	{
 		$table = $this->object;
 
 		// Save original tree for future reference
@@ -269,7 +278,8 @@ class JTableNestedTest extends JoomlaDatabaseTestCase {
 		$this->assertEquals('18', $treeTemp[2]->id, 'Line: '.__LINE__.' id for element 2 should be 18');
 	}
 
-	public function testMoveByReference() {
+	public function testMoveByReference()
+	{
 		$table = $this->object;
 
 		// Save original tree for future reference
@@ -370,7 +380,8 @@ class JTableNestedTest extends JoomlaDatabaseTestCase {
 		$this->compareTrees($treeOriginal, $treeOriginalNew);
 	}
 
-	public function testDelete() {
+	public function testDelete()
+	{
 		$table = $this->object;
 		$assetsTable =  new JTableAsset($this->_db);
 		$treeAssetsOriginal = $assetsTable->getTree('1');
@@ -470,11 +481,13 @@ class JTableNestedTest extends JoomlaDatabaseTestCase {
 		$this->assertEquals(146, count($treeAssetsTemp), 'Line: '.__LINE__.' After delete, assets root tree should have 146 nodes');
 	}
 
-	public function testCheck() {
+	public function testCheck()
+	{
 		$this->assertTrue(true, 'Test skipped since this method is overridden in all subclasses');
 	}
 
-	public function testStore() {
+	public function testStore()
+	{
 		// Use assets table since it does not override the JTableNested store() method
 		$table =  new JTableAsset($this->_db);
 
@@ -527,7 +540,8 @@ class JTableNestedTest extends JoomlaDatabaseTestCase {
 		$this->assertEquals(2, $treeTemp[6]->level, 'Line: '.__LINE__.' New node level should be 2');
 	}
 
-	public function testPublish() {
+	public function testPublish()
+	{
 		// Test with pk's in argument
 		$table = $this->object;
 		$pks = array('18', '31', '32');
@@ -566,13 +580,14 @@ class JTableNestedTest extends JoomlaDatabaseTestCase {
 		// Test with parent node unpublished
 		// Try to publish Extensions (20) with parent unpublished
 		$pks = array('20');
-		$this->assertTrue($table->publish($pks, '1'), 'Line: '.__LINE__.' Can publish child if parent is not published');
+		$this->assertFalse($table->publish($pks, '1'), 'Line: '.__LINE__.' Should not publish child if parent is not published');
 		$treeTemp = $table->getTree('1');
 		$this->assertEquals('20', $treeTemp[7]->id, 'Line: '.__LINE__.' Node 7 is id=20');
-		$this->assertEquals('1', $treeTemp[7]->published, 'Line: '.__LINE__.' Id 20 should be published');
+		$this->assertEquals('0', $treeTemp[7]->published, 'Line: '.__LINE__.' Id 20 should not be published');
 	}
 
-	public function testOrderUp() {
+	public function testOrderUp()
+	{
 		$table = $this->object;
 		$this->assertTrue($table->orderUp('14'), 'Line: '.__LINE__.' orderUp should succeed');
 		$treeTemp = $table->getTree('1');
@@ -584,11 +599,13 @@ class JTableNestedTest extends JoomlaDatabaseTestCase {
 		$this->assertEquals('14', $treeTemp[1]->id, 'Line: '.__LINE__.' id is not correct');
 	}
 
-	public function testOrderDown() {
+	public function testOrderDown()
+	{
 		$this->assertTrue(true, 'Test skipped since this method is tested in the testOrderUp method');
 	}
 
-	public function testGetRootId() {
+	public function testGetRootId()
+	{
 		$table = $this->object;
 
 		// Test valid table
@@ -629,7 +646,8 @@ class JTableNestedTest extends JoomlaDatabaseTestCase {
 		$this->assertFalse($table->getRootId(), 'Line: '.__LINE__.' cannot get root if >1 rows with alias = root');
 	}
 
-	public function testRebuild() {
+	public function testRebuild()
+	{
 		// Without parent id
 		$table = $this->object;
 		$this->removeLftRgtValues($table);
@@ -664,14 +682,16 @@ class JTableNestedTest extends JoomlaDatabaseTestCase {
 		$this->assertEquals('mypath/uncategorised', $tree[1]->path, 'Line: '.__LINE__.' mypath should be prepended to normal path');
 	}
 
-	public function testRebuildPath() {
+	public function testRebuildPath()
+	{
 		$table = $this->object;
 		$this->assertTrue($table->rebuildPath('64'));
 		$tree = $table->getTree('1');
 		$this->assertEquals('sample-data-articles/joomla/extensions/modules/content-modules', $tree[10]->path, 'Line: '.__LINE__.' mypath should be prepended to normal path');
 	}
 
-	public function testSaveorder() {
+	public function testSaveorder()
+	{
 		$table = $this->object;
 		// Swap orders of id's 21 and 22 (both level 4)
 		// And reverse order of 64, 65, 66, 67, 75 (all level 5 with parent 22)
@@ -699,7 +719,8 @@ class JTableNestedTest extends JoomlaDatabaseTestCase {
 		$this->assertFalse($table->saveorder($idArray, 1), 'Line: '.__LINE__.' saveorder should fail');
 	}
 
-	private function compareTrees($tree1, $tree2) {
+	private function compareTrees($tree1, $tree2)
+	{
 		for ($i = 0; $i < count($tree1); $i++) {
 			$this->assertEquals($tree1[$i]->id, $tree2[$i]->id, 'Line: '.__LINE__.' id#' . $i . ' should be equal');
 			$this->assertEquals($tree1[$i]->lft, $tree2[$i]->lft, 'Line: '.__LINE__.' lft#' . $i . ' should be equal');
@@ -709,7 +730,8 @@ class JTableNestedTest extends JoomlaDatabaseTestCase {
 		}
 	}
 
-	private function checkLftRgt($tree) {
+	private function checkLftRgt($tree)
+	{
 		$lftRgtValues = array();
 		// build array of all lft and rgt values
 		$start = $tree[0]->lft;
@@ -740,7 +762,8 @@ class JTableNestedTest extends JoomlaDatabaseTestCase {
 	 * @param JTableNested $table
 	 */
 
-	private function removeLftRgtValues($table) {
+	private function removeLftRgtValues($table)
+	{
 		$query = $this->_db->getQuery(true);
 		$query->update($table->getTableName());
 		$query->set('lft = 0, rgt = 0, level = 0');
@@ -748,4 +771,3 @@ class JTableNestedTest extends JoomlaDatabaseTestCase {
 		$this->assertTrue($this->_db->query(), 'Query to break valid table');
 	}
 }
-?>
